# monte-carlo-in-rust

./: .gitignore  Cargo.toml  README.md  benchmark.sh  benchmarks.md
benchmarks/: .gitignore
src/: app.rs  args.rs  cache.rs  grid.rs  lib.rs  main.rs  metric.rs  metrics.rs  point.rs  points.rs  random.rs  timer.rs
src/app/: app.rs  mod.rs  progress.rs
tests/: app.rs  cache.rs  grid.rs  metric.rs  metrics.rs  point.rs  points.rs  random.rs
