[package]
name = "monte_carlo"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
clap = { version = "4.3", features = ["derive"] }
num_cpus = "1.16.0"
log = "0.4.22"
env_logger = "0.11.5"
crossbeam = "0.8"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"


